--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "autoprefixer": "^9.8.6",
+    "downshift": "^6.1.0",
+    "faker": "^5.4.0",
+    "lodash": "^4.17.21",
     "next": "10.0.1",
     "postcss": "^7.0.35",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.30.0",
+    "sass-loader": "10.1.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
   },
   "devDependencies": {
